# dm3

./: CMakeLists.txt  README.md  dm3.urdf~  package.xml
config/: robot_control.yaml
launch/: display.launch  display.launch~  gazebo.launch  gazebo.launch~
plugin/: CMakeLists.txt  my_plugin.cc  my_plugin.cc~
urdf/: dm3.urdf  dm3.urdf~
